modify openAPI info >>> powerplay

--- a/api/doc/thor.yaml
+++ b/api/doc/thor.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.1
 info:
   title: Thorest
   description: |
-    RESTful API to access PlayMaker  Network
+    RESTful API to access PlayMaker PowerPlay Network
 
     [Project Home](https://github.com/playmakerchain/powerplay)
   license:
