commit latest modifications

--- a/api/doc/powerplay.yaml
+++ b/api/doc/powerplay.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.1
 info:
-  title: Thorest
+  title: PowerPlay
   description: |
-    RESTful API to access PlayMaker PowerPlay Network
+    RESTful API to access PowerPlay Network
 
     [Project Home](https://github.com/playmakerchain/powerplay)
   license:
